--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node app"
   },
   "dependencies": {
-    "express": "3.0.0beta6",
+    "express": "2.5.11",
     "jade": "*"
   }
 }
