--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "3.x",
     "jade": "*",
     "querystring": "*",
-    "http": "*"
+    "http": "*",
+    "follow-redirects": "*"
   }
 }
